--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sharda univeristy</title>
+    <title>Sharda univeristy</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="android-chrome-512x512.png" type="image/x-icon">
 </head>
 <body>
     <header class="header"> 
-       
         <nav class="nav">
-             <h1>google Form</h1>
+            <h1>google Form</h1>
             <div class="list">
                 <ul>
                     <li><a href="#none">Home</a></li>
