--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sharda univeristy</title>
+    <title>Sharda university</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="android-chrome-512x512.png" type="image/x-icon">
 </head>
@@ -12,17 +12,17 @@
         <nav class="nav">
             <h1>google Form</h1>
             <div class="list">
-                <ul>
-                    <li><a href="#none">Home</a></li>
-                    <li><a href="#none">Work</a></li>
-                    <li><a href="#none">Contact</a></li>
-                    <li><a href="#none">About</a></li>
+                <ul draggable="true">
+                    <li><a href="https://github.com/iadii" target="_blank">Work</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://www.linkedin.com/in/aditya-mishra-58722b110/" target="_blank">About</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
                 </ul>
             </div>
         </nav>
     </header>
    <main class="main">
-    <div class="container">
+    <div class="container" draggable="true">
         <form action="https://docs.google.com/forms/d/e/1FAIpQLScZjYfSGQDCiz10ZOWaR3wDmq-YUSu-BL5rU3LYlGvGOgvdPA/formResponse">
             <div class="box">
             <label for="entry.324574588"></label>
@@ -44,5 +44,15 @@
         </form>
     </div>
    </main>
+   <footer>
+    <div id="contact">
+        <ul>
+            <li><a href="tel:99931413416"><img src="phone-svgrepo-com.svg" alt="" width="20px" target="_blank"></a></li>
+            <li><a href="mailto:mishraaditya3456@gmail.com"><img src="gmail-svgrepo-com.png" alt="" width="20px"/></a></li>
+            <li><a href="https://wa.me/9931413416" target="_blank"><img src="whatsapp-social-media-svgrepo-com.png" alt="" width="20px"></a></li>
+        </ul>
+        
+    </div>
+   </footer>
 </body>
 </html>
